<resources>
    <string name="app_name">AutoTest</string>
    <string name="app_name_cn">设备测试</string>
    <string name="SpeakerTitle">扬声器测试</string>
    <string name="SpeakerContent">是否听到声音?</string>
    <string name="Left">左</string>
    <string name="Right">右</string>
    <string name="SpeakerTip">左：男, 右：女</string>
    <string name="SetSpeakerphoneOn">扬声器已打开</string>
    <string name="SetSpeakerphoneOff">扬声器已关闭</string>
    <string name="BrightnessTitle">背光测试</string>
    <string name="BrightnessTitleStop">停止背光测试</string>
    <string name="BrightnessSubTitle">请观察背光有无明显变化</string>
    <string name="BluetoothTitle">蓝牙测试</string>
    <string name="BluetoothSubTitle">提示：为节省时间，请在测试点旁开启一台蓝牙设备用于本机搜索</string>
    <string name="BluetoothAdapterFail">获取适配器失败!</string>
    <string name="BluetoothScan">搜索设备...</string>
    <string name="BluetoothInit">请等待设备初始化.</string>
    <string name="BluetoothOpenF">打开蓝牙失败！</string>
    <string name="BluetoothFindF">查找设备失败.</string>
    <string name="BluetoothDeviceIsOpen">蓝牙设备已正常打开</string>
    <string name="BluetoothFindS">找到设备....\n 测试通过!</string>
    <string name="BluetoothMAC">蓝牙 MAC: </string>
    <string name="GpsTestTitle">Gps C/No 测试</string>
    <string name="GpsTestSubTitle">请察看设备</string>
    <string name="GpsTestResult">请等待设备初始化</string>
    <string name="GpsLocationTestTitle">Gps 定位测试</string>
    <string name="GpsLocationTestSubTitle">请观察设备</string>
    <string name="GpsLocationTestResult">请等待初始化设备</string>
    <string name="GpsWaitforLocationData">等待位置数据...</string>
    <string name="GpsOff">Gps 未启用！触摸屏，转到设置打开 GPS。</string>
    <string name="GpsWaitforNMEAInformation">等待 NMEA 信息</string>
    <string name="gpstextx">X axis C/No:</string>
    <string name="gpstexty">Y axis C/No:</string>
    <string name="gpstestx">Test X axis</string>
    <string name="gpstesty">Test Y axis</string>
    <string name="HeadsetMicTitle">耳机录音测试</string>
    <string name="HeadsetMicSubTitle">请录一段话，耳机将播放录音内容。</string>
    <string name="LcdTestTitle">显示屏测试</string>
    <string name="LcdTestStart">点击屏幕开始测试</string>
    <string name="PhoneMictTitle">录音测试</string>
    <string name="PhoneMicSubTitle">请说话，马上开始录音,录音后将自动播放刚才说的内容</string>
    <string name="PowertestTitle">电池信息</string>
    <string name="PowertestSubTitle"></string>
    <string name="AcUnplug">未充电测试(unplug ac):</string>
    <string name="AcPlugin">充电测试(plug in ac):</string>
    <string name="ChargeState">电池状态</string>
    <string name="Voltage">电池电压:</string>
    <string name="Capacity">电池电量:</string>
    <string name="Plug">电池连接:</string>
    <string name="SdCardTitle">SD卡测试</string>
    <string name="SdCardSubTitle">请察看设备</string>
    <string name="SdCardFail">失败！找不到SD卡</string>
    <string name="SdCardFind">发现SD卡，容量大小 ： </string>
    <string name="SdCardAvailable"> , 可用空间 : </string>
    <string name="VersionTitle">版本测试</string>
    <string name="ClientVersion">客户版本号：</string>
    <string name="Firmwareversion">固件版本:</string>
    <string name="Kernelversion">内核版本:</string>
    <string name="Basebandversion">基带版本:</string>
    <string name="Buildversion">产品版本:</string>
    <string name="imei_version">IMEI:</string>
    <string name="set_imei">已自动写入可用IMEI码（重启可见）</string>
    <string name="VibrationTest">震动测试</string>
    <string name="VibrationContent">请判断当前设备是否正在震动</string>
    <string name="wififindtest">已找到Wifi</string>
    <string name="Wifitest">无线测试</string>
    <string name="WifiSubText">请查看设备</string>
    <string name="WifiResultText">请等待设备初始化</string>
    <string name="WifiError">无线测试失败!</string>
    <string name="WifiFind">找到网络-</string>
    <string name="WifiTry">尝试连接到 </string>
    <string name="WifiConnect">已连接到 </string>
    <string name="WifiConnectErr">找不到一个可连接的路由！</string>
    <string name="WifiPing">Ping 测试 : </string>
    <string name="WifiHttp">Http 连接测试: </string>
    <string name="WifiIsOpen">Wifi已打开</string>
    <string name="WifiSignal3">信号(强)</string>
    <string name="WifiSignal2">信号(中)</string>
    <string name="WifiSignal1">信号(弱)</string>
    <string name="WifiSignal0">信号(差)</string>
    <string name="WifiMAC">(MAC: </string>
    <string name="Wifi_test_environment_tips">提示: wifi测试环境需要提供开放AP</string>
    <string name="wifi_is_searching">正在搜索WiFi</string>
    <string name="wifi_test_success">WiFi测试通过</string>
    <string name="SensorTest">感应器测试</string>
    <string name="num200">200</string>
    <string name="gsensorvalue">gsensor值: </string>
    <string name="Accelerometer">=== 加速仪 === </string>
    <string name="name_acc"> 名字:</string>
    <string name="vendor_acc"> 厂家:</string>
    <string name="version_acc">版本:</string>
    <string name="maxRange_acc">最大值:</string>
    <string name="resolution_acc">解析度:</string>
    <string name="power_acc">电源:</string>
    <string name="sensor_x">x:</string>
    <string name="sensor_y">y:</string>
    <string name="sensor_z">z:</string>
    <string name="Orientation">=== 方向 === </string>
    <string name="Azimuth"> 方位角:</string>
    <string name="Pitch"> Pitch:</string>
    <string name="Roll"> Roll:</string>
    <string name="Light">=== 光感 === </string>
    <string name="lightvalue">光感（没变化表示测试失败）</string>
    <string name="Proximity">=== Proximity === </string>
    <string name="Magnetic_Field">=== Magnetic_Field === </string>
    <string name="Temperature">=== Temperature === </string>
    <string name="Gyroscope">=== 陀螺仪  === </string>
    <string name="Gsensor_x">x轴朝上(x:9,y:0,z:0)</string>
    <string name="Gsensor_y">y轴朝上(x:0,y:9,z:0)</string>
    <string name="Gsensor_z">z轴朝上(x:0,y:0,z:9)</string>
    <string name="GsensorTest">重力感应测试</string>
    <string name="MsensorTest">磁感应测试</string>
    <string name="GyroscopeTest">陀螺仪测试</string>
    <string name="LightsensorTest">光感应测试</string>
    <string name="KeyboardTestTitle">按键测试</string>
    <string name="KeyboardTestSubTitle">请测试所有按键</string>
    <string name="VolUp">Vol+</string>
    <string name="VolDown">Vol-</string>
    <string name="Back">Back</string>
    <string name="Menu">Menu</string>
    <string name="Home">Home</string>
    <string name="FlashLightTest">FlashLight Test</string>
    <string name="FlashLightTestSubText">Please observe the flashlight of your device when
		you touch the buttons</string>
    <string name="OpenFlashLight">Open Flash Light</string>
    <string name="ShutDownFlashLight">Shut Down Flash Light</string>
    <string name="SimCardTestTitle">SIM 卡测试</string>
    <string name="MrioUSBTitle">Mrio USB Test</string>
    <string name="MrioUSBsubTitle">Plug in usb and unplug usb</string>
    <string name="UsbUnplug">Unplug usb test:</string>
    <string name="UsbPlugin">Plug in usb test:</string>
    <string name="FMRadioTestTitle">FM 收音机测试</string>
    <string name="FMRadioTextMsgText">请触摸屏幕，打开 FM 收音机</string>
    <string name="CirTestTitle">Cir Test</string>
    <string name="CirSend">Send</string>
    <string name="CpuInfo">CPU info</string>
    <string name="MemInfo">MEM info</string>
    <string name="DmiInfo">DMI info</string>
    <string name="IrdaTestTitle">IrDA Test</string>
    <string name="SirSend">Sir Send</string>
    <string name="SirReceive">Sir Receive</string>
    <string name="SirTest">Sir Test</string>
    <string name="FirSend">Fir Send</string>
    <string name="FirReceive">Fir Receive</string>
    <string name="FirTest">Fir Test</string>
    <string name="InsertSdCard">请插入SD卡!</string>
    <string name="SdCardNospace">SD卡没有空间!</string>
    <string name="RecordTest">录音测试</string>
    <string name="HeadsetRecodrSuccess">录音成功！开始回放.</string>
    <string name="HeadsetInsertEarphone">请插入耳机!</string>
    <string name="HeadsetRerecording">重录</string>
    <string name="RecordError">录音失败！</string>
    <string name="LedTestTitle">Led Test</string>
    <string name="Red">RED</string>
    <string name="Green">GREEN</string>
    <string name="Blue">BLUE</string>
    <string name="HdmiTestTitle">HDMI测试</string>
    <string name="HdmiNoInsert">请插入HDMI并点击屏幕开始测试！</string>
    <string name="HdmiPrepare">HDMI初始化... 请等待3秒左右.</string>
    <string name="HdmiResult">测试完成 \n屏幕能正常显示吗?</string>
    <string name="HdmiStart">开始测试!</string>
    <string name="HdmiStartFail">启动失败! 请确认HDMI是否插入.</string>
    <string name="storageTestTitle">存储器信息</string>
    <string name="nand_flash">USB存储器（nand flash）</string>
    <string name="internal_storage">内部存储器（data分区）</string>
    <string name="nand_unavailable">不可用</string>
    <string name="StorageTestTitle">存储读写测试</string>
    <string name="StorageSDNoFind">SD卡路径未找到...\n</string>
    <string name="StorageSDCopyF">复制到SD卡失败!\n</string>
    <string name="StorageSDCopyS">复制到SD卡成功!\n</string>
    <string name="StorageUsbNoFind">Usb host路径未找到...\n</string>
    <string name="StorageUsbCopyF">复制到UbsHost 失败!\n</string>
    <string name="StorageUsbCopyS">复制到UbsHost 成功!\n</string>
    <string name="RuninTestTitle">Run In Test</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="btnPassText">通过</string>
    <string name="btnFailText">失败</string>
    <string name="btnSkipText">返回上一项测试</string>
    <string name="OKText">OK!</string>
    <string name="Testall">Test all</string>
    <string name="Cancel">关闭</string>
    <string name="Clear">清除</string>
    <string name="showFistTest">显示测试首界面</string>
    <string name="Uninstall">卸载</string>
    <string name="success">成功</string>
    <string name="fail">失败</string>
    <string name="Version">V20151120</string>
    <string name="UsbHostTestTitle">Usb Host测试</string>
    <string name="Hardware">硬件 : </string>
    <string name="HostStorageState">存储状态 : </string>
    <string name="Writable">写测试 : </string>
    <string name="WriteData">写数据! </string>
    <string name="ReadData">读数据! </string>
    <string name="MakeDir">创建文件夹 </string>
    <string name="CreateFile">创建新文件 </string>
    <string name="FileDel">删除文件 </string>
    <string name="DirDel">删除文件夹 </string>
    <string name="Compare">文件比较 </string>
    <string name="HardwareSupport">硬件 : 支持. \n发现设备 : /dev/block/</string>
    <string name="HardwareNoSupport">硬件 : 找不到设备!(默认支持U盘设备) \n请插入U盘设备并等待5秒左右.</string>
    <string name="total_space">总存储空间</string>
    <string name="available_space">可用存储空间</string>
    <string name="camera_switch">切换</string>
    <string name="SingleTest">单项测试</string>
    <string name="testall">测试选中</string>
    <string name="nocamera">没有摄像头</string>
    <string name="btnRetest">重测</string>
    <string name="btnreturnText">返回测试界面</string>
    <string name="barcode_version">条码:</string>
    <string name="calibration_status">校准标志位:</string>
    <string name="final_status">最终结果:</string>
    <string name="sim_test_passed">已检测到插入SIM卡，测试通过！</string>
    <string name="sim_test_failed">未检测到SIM卡，测试失败！</string>
    <string name="test_passed">测试通过!</string>
    <string name="test_failed">测试失败!</string>
    <string name="device_info_default">未知</string>
    <string name="radioInfo_unknown">未知</string>
    <string name="radioInfo_service_in">正在使用中</string>
    <string name="radioInfo_service_out">不在服务区</string>
    <string name="radioInfo_service_emergency">只能拨打紧急呼救电话</string>
    <string name="radioInfo_service_off">关闭无线通信</string>
    <string name="radioInfo_data_disconnected">已断开连接</string>
    <string name="radioInfo_data_connecting">正在连接</string>
    <string name="radioInfo_data_connected">已连接</string>
    <string name="radioInfo_data_suspended">已暂停</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="signal_status_test">信号状态测试</string>
    <string name="Car">Car</string>
    <string name="Ok">Ok</string>
    <string name="title_record_test">摄像头测试</string>
    <string name="record_test_hint">请检测后拉、前置摄像头：</string>
    <string name="record_test_hint_back">1.后拉：连接倒车线，观察倒车界面是否正常预览</string>
    <string name="record_test_hint_front">2.前置：点击主页键回到主界面，观察录像是否正常预览</string>
    <string name="record_test_hint_end">二者都正常预览测试通过，否则失败。</string>
</resources>