<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="fill_parent"
	android:layout_height="fill_parent" xmlns:android="http://schemas.android.com/apk/res/android">
	<TextView android:textSize="30.0sp" android:gravity="center"
		android:id="@+id/keyboardtest_title" android:text="@string/KeyboardTestTitle"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		
		android:layout_marginTop="30.0dip" android:layout_alignParentTop="true" />

	<LinearLayout android:layout_below="@id/keyboardtest_title"
		android:orientation="horizontal" android:layout_width="fill_parent"
		android:layout_height="fill_parent" android:gravity="center">

		<!--        ok   volup   home   voldown   car   back      -->

		<Button android:id="@+id/bt_ok" android:layout_width="100dp"
			android:layout_height="60.0dip" style="@+style/Keyboard"
			android:text="@string/Ok" android:layout_marginLeft="5dip"/>

		<Button android:id="@+id/bt_soundup" android:layout_width="100dp"
			android:layout_height="60.0dip" style="@+style/Keyboard"
			android:text="@string/VolUp" android:layout_marginLeft="5dip"/>

		<Button android:id="@+id/bt_home" android:layout_width="100dp"
			android:layout_height="60.0dip" style="@+style/Keyboard" 
			android:text="@string/Home" android:layout_marginLeft="5dip"/>

		<Button android:id="@+id/bt_sounddown" android:layout_width="100dp"
			android:layout_height="60.0dip" style="@+style/Keyboard"
			android:text="@string/VolDown" android:layout_marginLeft="5dip"/>

		<Button android:id="@+id/bt_car" android:layout_width="100dp"
			android:layout_height="60.0dip" style="@+style/Keyboard" 
			android:text="@string/Car" android:layout_marginLeft="5dip"/>

		<Button android:id="@+id/bt_back" android:layout_width="100dp"
			android:layout_height="60.0dip" style="@+style/Keyboard" 
			android:text="@string/Back" android:layout_marginLeft="5dip"/>			


		<Button android:id="@+id/bt_menu" android:layout_width="100dp"
			android:layout_height="60.0dip" style="@+style/Keyboard" android:visibility="gone"
			android:text="@string/Menu" android:layout_marginLeft="5dip"/>



	</LinearLayout>

	
	<include layout="@xml/control_buttons" android:id="@+id/result_bt_layout"/>
</RelativeLayout>
