<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent" android:layout_height="match_parent">

	<RelativeLayout android:layout_height="match_parent"
		android:layout_width="wrap_content" android:id="@+id/relativeLayout1">
		<TextView android:id="@+id/LedTest" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:layout_alignParentTop="true"
			android:gravity="center_horizontal" android:paddingBottom="20px"
			android:textSize="24sp" android:visibility="visible" android:text="@string/LedTestTitle" />

		
		 <include layout="@xml/control_buttons" android:id="@+id/led_buttons"/>

		<LinearLayout android:layout_above="@id/led_buttons"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:orientation="horizontal">
			<Button android:id="@+id/red_btn" android:layout_width="0dip"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:text="@string/Red" />
			<Button android:id="@+id/green_btn" android:layout_width="0dip"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:text="@string/Green" />
			<Button android:id="@+id/blue_btn" android:layout_width="0dip"
				android:layout_height="wrap_content" android:layout_weight="1"
				android:text="@string/Blue" />
			<!-- Button android:id="@+id/power_btn" android:layout_width="0dip"
				android:layout_height="wrap_content" android:layout_weight="1" /-->
		</LinearLayout>
	</RelativeLayout>



</LinearLayout>
