<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
   android:id="@+id/layout1"
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   xmlns:android="http://schemas.android.com/apk/res/android">
     <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="60dip"> 
    
    	<TextView
		    android:id="@+id/textTitle"
		    android:visibility="visible"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_centerInParent="true"
		    android:gravity="center_horizontal"
			android:textSize="30sp"
			android:layout_margin="20px"
			android:text="@string/UsbHostTestTitle"
			/>
		<TextView 
			android:id="@+id/linuxSupport"
			android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textSize="22sp"
		    android:text="@string/Hardware"
		    />
		<TextView 
			android:id="@+id/hostStorageState"
			android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textSize="22sp"
		    android:text="@string/HostStorageState"
		    android:visibility="gone"
		    />
		<TextView 
			android:id="@+id/Writable"
			android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textSize="22sp"
		    android:textColor="#ff0000"
		    android:text="@string/Writable"
		    android:visibility="gone"
		    />
			
			
    		
    		

  </LinearLayout>
   <include layout="@xml/control_buttons" android:id="@+id/btns"/>
    
</RelativeLayout>