<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/layout1"
	android:layout_width="fill_parent" android:layout_height="wrap_content"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" android:orientation="vertical"
		android:paddingBottom="60dip">

		<TextView android:id="@+id/textTitle" android:visibility="visible"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_centerInParent="true" android:gravity="center_horizontal"
			android:textSize="24sp" android:text="@string/FlashLightTest" android:paddingTop="20px" />


		<TextView android:id="@+id/textSubTitle" android:visibility="visible"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:layout_centerInParent="true" android:gravity="center_horizontal"
			android:text="@string/FlashLightTestSubText"  android:textSize="20sp" android:paddingTop="20px" />
	</LinearLayout>
	
	<LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:orientation="horizontal"
		android:layout_centerVertical="true"
		>

        <Button android:id="@+id/btn_open_flashlight"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"           
            android:text="@string/OpenFlashLight"
        />

        <Button android:id="@+id/btn_shutdown_flashlight"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ShutDownFlashLight"
        />
	</LinearLayout>

	<include layout="@xml/control_buttons" android:id="@+id/compass_buttons"/>

</RelativeLayout>